// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`must create a new map 1`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return a new map if block keys change 1`] = `true`;

exports[`must return a new map if block keys change 2`] = `true`;

exports[`must return a new map if block keys change 3`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return a new map if block keys change 4`] = `
Immutable.OrderedMap {
  "asdf": "LTR",
}
`;

exports[`must return a new map if direction changes 1`] = `true`;

exports[`must return a new map if direction changes 2`] = `true`;

exports[`must return a new map if direction changes 3`] = `
Immutable.OrderedMap {
  "a": "LTR",
  "c": "LTR",
}
`;

exports[`must return a new map if direction changes 4`] = `
Immutable.OrderedMap {
  "a": "LTR",
  "b": "RTL",
}
`;

exports[`must return the same map if no changes 1`] = `true`;

exports[`must return the same map if no changes 2`] = `true`;

exports[`must return the same map if no changes 3`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return the same map if no changes 4`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return the same map if no directions change 1`] = `true`;

exports[`must return the same map if no directions change 2`] = `true`;

exports[`must return the same map if no directions change 3`] = `true`;

exports[`must return the same map if no directions change 4`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return the same map if no directions change 5`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return the same map if no text changes 1`] = `true`;

exports[`must return the same map if no text changes 2`] = `true`;

exports[`must return the same map if no text changes 3`] = `true`;

exports[`must return the same map if no text changes 4`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;

exports[`must return the same map if no text changes 5`] = `
Immutable.OrderedMap {
  "a": "LTR",
}
`;
